# new_block_gr

./: CMakeLists.txt  MANIFEST.md
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-try2Config.cmake
docs/: CMakeLists.txt  README.try2
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  try2_try.block.yml
include/gnuradio/try2/: CMakeLists.txt  api.h  try.h
lib/: CMakeLists.txt  try_impl.cc  try_impl.h
python/try2/: CMakeLists.txt  __init__.py
python/try2/bindings/: CMakeLists.txt  failed_conversions.txt  python_bindings.cc  try_python.cc
python/try2/bindings/docstrings/: try_pydoc_template.h
